--- a/app/src/main/res/layout/item_expense_income.xml
+++ b/app/src/main/res/layout/item_expense_income.xml
@@ -1,95 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv_expense_income_container_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="15dp"
     android:layout_marginHorizontal="15dp"
-    android:layout_marginTop="20dp"
+    android:layout_marginBottom="15dp"
+    app:cardCornerRadius="15dp"
     app:cardElevation="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-<!--        <RelativeLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content">-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/tv_expense_income_time_item"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="10:10"-->
-<!--                android:paddingHorizontal="15dp"-->
-<!--                android:paddingTop="10dp"-->
-<!--                android:layout_alignParentEnd="true"/>-->
-
-<!--        </RelativeLayout>-->
+        <ImageView
+            android:id="@+id/iv_expense_income_type_item"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:padding="15dp"
+            android:src="@drawable/ic_radio_button"
+            app:tint="#12DC12" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/iv_expense_income_type_item"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@drawable/ic_radio_button"
-                android:padding="15dp"
-                app:tint="#12DC12" />
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/tv_expense_income_amount_item"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Rp. 10000"
-                        android:textSize="30sp"
-                        android:textStyle="bold"
-                        android:paddingVertical="7dp"
-                        android:paddingStart="10dp"
-                        android:layout_marginRight="55dp"/>
-
-                    <RelativeLayout
-                        android:layout_width="40dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="-55dp">
-
-                        <TextView
-                            android:id="@+id/tv_expense_income_time_item"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="24:24"
-                            android:paddingTop="10dp"
-                            android:layout_alignParentEnd="true"/>
-
-                    </RelativeLayout>
-
-                </LinearLayout>
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tv_expense_income_notes_item"
+                    android:id="@+id/tv_expense_income_amount_item"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="akjsdnakjsbdkasnk"
-                    android:paddingBottom="15dp"
-                    android:paddingHorizontal="10dp"/>
+                    android:layout_marginRight="55dp"
+                    android:paddingVertical="7dp"
+                    android:paddingStart="10dp"
+                    android:text="Rp. 10000"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+
+                <RelativeLayout
+                    android:layout_width="40dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="-55dp">
+
+                    <TextView
+                        android:id="@+id/tv_expense_income_time_item"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:paddingTop="10dp"
+                        android:text="24:24" />
+
+                </RelativeLayout>
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_expense_income_notes_item"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="10dp"
+                android:paddingBottom="15dp"
+                android:text="akjsdnakjsbdkasnk" />
 
         </LinearLayout>
 
