RecyclerView Images, Show Images with DialogFragment, Delete Image from DB

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,6 +8,7 @@
     <attr name="backgroundForIcon" format="color"/>
     <attr name="colorIconForNav" format="color"/>
     <attr name="buttonPressedColor" format="color"/>
+    <attr name="customTextColor" format="color"/>
     <declare-styleable name="MoodStyle">
         <attr name="angryMoodBackground" format="color"/>
         <attr name="happyMoodBackground" format="color"/>
