--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -35,6 +35,26 @@
                 android:layout_height="wrap_content"
                 android:background="@color/transparent"/>
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_diary_images_container"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                app:cardBackgroundColor="?attr/componentBackgroundColor"
+                app:cardElevation="0dp"
+                android:layout_marginHorizontal="10dp"
+                app:cardCornerRadius="10dp"
+                android:visibility="gone">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_diary_images_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="10dp"
+                    android:paddingHorizontal="5dp"
+                    android:orientation="horizontal"/>
+
+            </androidx.cardview.widget.CardView>
+
             <EditText
                 android:id="@+id/et_edit_diary_text"
                 android:layout_width="match_parent"
@@ -88,7 +108,7 @@
             app:fab_colorPressed="?attr/buttonPressedColor"
             app:fab_size="normal"
             app:fab_icon="@drawable/mood"
-            app:fab_title="@string/edit_mood"/>
+            app:fab_title="@string/edit_mood" />
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_add_images"
