Try Solve BackPressed when show Image, Code Read Logged In User Diaries from DB, not show yet

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,18 +6,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="edu.bluejack20_1.dearmory.fragments.HomeFragment">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/transparent"
+        android:overScrollMode="always">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Home Fragment"
-            android:textSize="30dp"
-            android:gravity="center"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    </RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:paddingVertical="5sp"
+                    android:text="@string/my_diaries"
+                    android:textAlignment="center"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_diaries_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:overScrollMode="never"/>
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
@@ -30,14 +54,5 @@
         app:elevation="6dp"
         android:src="@drawable/write"
         app:tint="?attr/colorIconWithBackground"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Home"
-        android:textSize="18sp"
-        android:textColor="?attr/editTextColor"
-        android:paddingLeft="20dp"
-        android:paddingVertical="10dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
