--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,9 @@
     <color name="label_bg">#C33C3F41</color>
     <color name="colorTransparent">#7A888888</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="whiteGrey">#8C8C8B</color>
+    <color name="whiteSmoke">#D9D9D9</color>
+    <color name="yellow">#F2CE11</color>
 
     <!--    Dark Theme-->
     <color name="colorPrimaryDarkTheme">#ffffff</color>
