--- a/app/src/main/res/layout/item_diary.xml
+++ b/app/src/main/res/layout/item_diary.xml
@@ -79,7 +79,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Rp 10000"
-                            android:paddingVertical="2dp"/>
+                            android:paddingVertical="2dp"
+                            android:textStyle="bold"/>
 
                     </LinearLayout>
 
