--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="#D81B60"/>
     <corners android:radius="150dp" />
     <stroke android:color="@color/colorWhite" android:width="2dp" />
 
