--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -9,6 +9,8 @@
     <attr name="colorIconForNav" format="color"/>
     <attr name="buttonPressedColor" format="color"/>
     <attr name="customTextColor" format="color"/>
+    <attr name="backgroundShading" format="color"/>
+
     <declare-styleable name="MoodStyle">
         <attr name="angryMoodBackground" format="color"/>
         <attr name="happyMoodBackground" format="color"/>
