--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkDarkTheme</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
@@ -30,6 +30,7 @@
         <item name="backgroundForIcon">@color/backgroundForIconDarkTheme</item>
         <item name="colorIconForNav">@color/colorIconForNavDarkTheme</item>
         <item name="buttonPressedColor">@color/buttonPressedColorDarkTheme</item>
+        <item name="backgroundShading">@color/backgroundShadingDarkTheme</item>
 
         <item name="expenseIconColor">@color/expenseIconDarkTheme</item>
         <item name="angryMoodBackground">@color/angryMoodDarkTheme</item>
@@ -58,6 +59,7 @@
         <item name="backgroundForIcon">@color/backgroundForIconLightTheme</item>
         <item name="colorIconForNav">@color/colorIconForNavLightTheme</item>
         <item name="buttonPressedColor">@color/buttonPressedColorLightTheme</item>
+        <item name="backgroundShading">@color/backgroundShadingLightTheme</item>
 
         <item name="expenseIconColor">@color/expenseIconLightTheme</item>
         <item name="angryMoodBackground">@color/angryMoodLightTheme</item>
@@ -86,6 +88,7 @@
         <item name="backgroundForIcon">@color/backgroundForIconGalaxyTheme</item>
         <item name="colorIconForNav">@color/colorIconForNavGalaxyTheme</item>
         <item name="buttonPressedColor">@color/buttonPressedColorGalaxyTheme</item>
+        <item name="backgroundShading">@color/backgroundShadingGalaxyTheme</item>
 
         <item name="expenseIconColor">@color/expenseIconGalaxyTheme</item>
         <item name="angryMoodBackground">@color/angryMoodGalaxyTheme</item>
@@ -100,7 +103,7 @@
     </style>
 
 <!--    Custom Time Picker-->
-    <style name="DialogDarkTheme" parent="Theme.AppCompat.DayNight.Dialog">
+    <style name="DialogDarkTheme" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorPrimary">@color/navBackgroundColorDarkTheme</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDarkDarkTheme</item>
         <item name="colorAccent">@color/navBackgroundColorDarkTheme</item>
@@ -112,7 +115,7 @@
         <item name="android:textColorSecondary">@color/textColorDarkTheme</item>
     </style>
 
-    <style name="DialogLightTheme" parent="Theme.AppCompat.DayNight.Dialog">
+    <style name="DialogLightTheme" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorPrimary">@color/navBackgroundColorLightTheme</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDarkLightTheme</item>
         <item name="colorAccent">@color/navBackgroundColorLightTheme</item>
@@ -124,7 +127,7 @@
         <item name="android:textColorSecondary">@color/textColorLightTheme</item>
     </style>
 
-    <style name="DialogGalaxyTheme" parent="Theme.AppCompat.DayNight.Dialog">
+    <style name="DialogGalaxyTheme" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorPrimary">@color/navBackgroundColorGalaxyTheme</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDarkGalaxyTheme</item>
         <item name="colorAccent">@color/navBackgroundColorGalaxyTheme</item>
@@ -153,6 +156,46 @@
 
     <style name="DatePickerGalaxy" parent="DialogGalaxyTheme">
         <item name="android:textColorPrimary">@color/textColorGalaxyTheme</item>
+    </style>
+    
+<!--    Theme with Font Size-->
+<!--    Dark-->
+    <style name="SmallDarkTheme" parent="DarkTheme">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="MediumDarkTheme" parent="DarkTheme">
+        <item name="android:textSize">17sp</item>
+    </style>
+
+    <style name="LargeDarkTheme" parent="DarkTheme">
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <!--    Light-->
+    <style name="SmallLightTheme" parent="LightTheme">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="MediumLightTheme" parent="LightTheme">
+        <item name="android:textSize">17sp</item>
+    </style>
+
+    <style name="LargeLightTheme" parent="LightTheme">
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <!--    Galaxy-->
+    <style name="SmallGalaxyTheme" parent="GalaxyTheme">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="MediumGalaxyTheme" parent="GalaxyTheme">
+        <item name="android:textSize">17sp</item>
+    </style>
+
+    <style name="LargeGalaxyTheme" parent="GalaxyTheme">
+        <item name="android:textSize">20sp</item>
     </style>
 
 </resources>
