--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,8 @@
         android:id="@+id/slide_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/main_background"
-        android:scaleType="centerCrop"
-        />
+        app:srcCompat="@drawable/dark"
+        android:scaleType="centerCrop"/>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/sliderView"
@@ -23,25 +22,33 @@
 
     </androidx.viewpager.widget.ViewPager>
 
-    <LinearLayout
-        android:id="@+id/dotsLayout"
-        android:layout_width="92dp"
-        android:layout_height="65dp"
-        android:layout_marginStart="143dp"
-        android:layout_marginTop="650dp"
-        android:orientation="horizontal"
-        android:padding="20dp" />
 
-    <Button
-        android:id="@+id/finish_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="280dp"
-        android:layout_marginTop="640dp"
-        android:background="#00FFFFFF"
-        android:text="FINISH"
-        android:textColor="@color/colorWhite"
-        android:visibility="invisible"
-        />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_marginTop="650dp">
+
+        <LinearLayout
+            android:id="@+id/dotsLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="65dp"
+            android:layout_centerHorizontal="true"
+            android:orientation="horizontal"
+            android:padding="20dp" />
+
+        <Button
+            android:id="@+id/finish_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="20dp"
+            android:layout_alignParentBottom="true"
+            android:background="#00FFFFFF"
+            android:text="@string/finish"
+            android:textColor="@color/colorWhite"
+            android:visibility="invisible"
+            android:textStyle="bold"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
