--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -6,13 +6,57 @@
     android:layout_height="match_parent"
     tools:context="edu.bluejack20_1.dearmory.activities.SignInActivity">
 
-    <Button
-        android:id="@+id/google_sign_in_button"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/google"
-        android:layout_centerInParent="true"
-        />
+    <ImageView
+        android:id="@+id/iv_signIn_background"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/google_sign_in_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            app:cardBackgroundColor="@color/black"
+            app:cardCornerRadius="15dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/google_logo"
+                    android:layout_marginVertical="5dp"
+                    android:layout_marginStart="10dp"/>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Login With Google"
+                        android:textStyle="bold"
+                        android:layout_centerVertical="true"
+                        android:paddingHorizontal="20dp"/>
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </RelativeLayout>
+
 
 <!--    <Button-->
 <!--        android:id="@+id/save_button"-->
