--- a/app/src/main/res/layout/confirmation_dialog.xml
+++ b/app/src/main/res/layout/confirmation_dialog.xml
@@ -30,7 +30,8 @@
             android:layout_width="135dp"
             android:layout_height="48dp"
             android:text="@string/yes"
-            android:background="@color/transparent"/>
+            android:background="@color/transparent"
+            android:textColor="?attr/editTextColor"/>
 
         <LinearLayout
             android:layout_width="1dp"
@@ -42,7 +43,8 @@
             android:layout_width="135dp"
             android:layout_height="48dp"
             android:text="@string/no"
-            android:background="@color/transparent"/>
+            android:background="@color/transparent"
+            android:textColor="?attr/editTextColor"/>
 
     </LinearLayout>
 
