--- a/app/src/main/res/layout/expense_income_type_dialog.xml
+++ b/app/src/main/res/layout/expense_income_type_dialog.xml
@@ -12,13 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:text="@string/expense"
-        android:background="@color/transparent"/>
+        android:background="@color/transparent"
+        android:textColor="?attr/editTextColor"/>
 
     <Button
         android:id="@+id/select_income_type"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:text="@string/income"
-        android:background="@color/transparent"/>
+        android:background="@color/transparent"
+        android:textColor="?attr/editTextColor"/>
 
 </LinearLayout>
