--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -20,6 +20,7 @@
             android:padding="10dp"
             android:layout_gravity="center"
             android:gravity="center"/>
+
         <com.github.sundeepk.compactcalendarview.CompactCalendarView
             android:id="@+id/compactcalendar_view"
             android:layout_width="fill_parent"
@@ -28,12 +29,11 @@
             android:layout_height="250dp"
             app:compactCalendarTargetHeight="250dp"
             app:compactCalendarTextSize="12sp"
-            app:compactCalendarBackgroundColor="#0800A8"
-            app:compactCalendarTextColor="#fff"
-            app:compactCalendarCurrentSelectedDayBackgroundColor="#4238FF"
-            app:compactCalendarCurrentDayBackgroundColor="#1C11F2"
-            app:compactCalendarMultiEventIndicatorColor="#fff"
-            />
+            app:compactCalendarBackgroundColor="?attr/colorPrimaryDark"
+            app:compactCalendarTextColor="?attr/editTextColor"
+            app:compactCalendarCurrentSelectedDayBackgroundColor="?attr/colorIconIfBgWhite"
+            app:compactCalendarCurrentDayBackgroundColor="?attr/backgroundShading"
+            app:compactCalendarMultiEventIndicatorColor="?attr/editTextColor"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/reminder_recycler_view"
