--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,10 +33,42 @@
 
             </LinearLayout>
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="270dp"
+                app:cardCornerRadius="20dp"
+                app:cardBackgroundColor="?attr/componentBackgroundColor"
+                app:cardElevation="0dp"
+                android:layout_marginHorizontal="15dp">
+
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="none">
+
+                    <RelativeLayout
+                        android:id="@+id/rl_line_chart_container"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:paddingTop="5dp">
+
+                        <com.github.mikephil.charting.charts.LineChart
+                            android:id="@+id/lc_expense_income_chart"
+                            android:layout_width="10dp"
+                            android:layout_height="250dp"
+                            android:background="@color/transparent"
+                            android:paddingBottom="10dp"/>
+
+                    </RelativeLayout>
+
+                </HorizontalScrollView>
+
+            </androidx.cardview.widget.CardView>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp">
+                android:paddingVertical="10dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -88,7 +120,8 @@
                     app:cardBackgroundColor="?attr/backgroundForIcon"
                     app:cardCornerRadius="20dp"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="15dp">
+                    android:layout_marginEnd="15dp"
+                    app:cardElevation="0dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -101,11 +134,17 @@
 
             </RelativeLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_diaries_container"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:overScrollMode="never"/>
+                android:layout_height="wrap_content">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_diaries_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:overScrollMode="never"/>
+
+            </RelativeLayout>
 
         </LinearLayout>
 
