--- a/app/src/main/res/layout/item_diary.xml
+++ b/app/src/main/res/layout/item_diary.xml
@@ -44,8 +44,8 @@
                 android:id="@+id/tv_diary_text_item"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="akjsdnakjsbdkasnk asjbasjdas asdadaa aaka aksjda askdsak aksndakn"
-                android:paddingBottom="5dp"/>
+                android:paddingBottom="5dp"
+                android:maxLines="2"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
