--- a/app/src/main/res/layout/day_of_week_picker.xml
+++ b/app/src/main/res/layout/day_of_week_picker.xml
@@ -24,92 +24,92 @@
             />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:clickable="true"
-        android:focusable="true">
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:gravity="center"-->
+<!--        android:clickable="true"-->
+<!--        android:focusable="true">-->
 
-        <TextView
-            android:id="@+id/su_day"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_margin="3dp"
-            android:background="@drawable/ico_day_picker_non_active"
-            android:gravity="center"
-            android:text="@string/day_of_week_su"
-            android:textColor="@color/whiteSmoke" />
+<!--        <TextView-->
+<!--            android:id="@+id/su_day"-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_margin="3dp"-->
+<!--            android:background="@drawable/ico_day_picker_non_active"-->
+<!--            android:gravity="center"-->
+<!--            android:text="@string/day_of_week_su"-->
+<!--            android:textColor="@color/whiteSmoke" />-->
 
-        <TextView
-            android:id="@+id/mo_day"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_margin="3dp"
-            android:background="@drawable/ico_day_picker_non_active"
-            android:gravity="center"
-            android:text="@string/day_of_week_mo"
-            android:textColor="@color/whiteSmoke" />
+<!--        <TextView-->
+<!--            android:id="@+id/mo_day"-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_margin="3dp"-->
+<!--            android:background="@drawable/ico_day_picker_non_active"-->
+<!--            android:gravity="center"-->
+<!--            android:text="@string/day_of_week_mo"-->
+<!--            android:textColor="@color/whiteSmoke" />-->
 
-        <TextView
-            android:id="@+id/tu_day"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_margin="3dp"
-            android:background="@drawable/ico_day_picker_non_active"
-            android:gravity="center"
-            android:text="@string/day_of_week_tu"
-            android:textColor="@color/whiteSmoke" />
+<!--        <TextView-->
+<!--            android:id="@+id/tu_day"-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_margin="3dp"-->
+<!--            android:background="@drawable/ico_day_picker_non_active"-->
+<!--            android:gravity="center"-->
+<!--            android:text="@string/day_of_week_tu"-->
+<!--            android:textColor="@color/whiteSmoke" />-->
 
-        <TextView
-            android:id="@+id/we_day"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_margin="3dp"
-            android:background="@drawable/ico_day_picker_non_active"
-            android:gravity="center"
-            android:text="@string/day_of_week_we"
-            android:textColor="@color/whiteSmoke" />
+<!--        <TextView-->
+<!--            android:id="@+id/we_day"-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_margin="3dp"-->
+<!--            android:background="@drawable/ico_day_picker_non_active"-->
+<!--            android:gravity="center"-->
+<!--            android:text="@string/day_of_week_we"-->
+<!--            android:textColor="@color/whiteSmoke" />-->
 
-        <TextView
-            android:id="@+id/th_day"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_margin="3dp"
-            android:background="@drawable/ico_day_picker_non_active"
-            android:gravity="center"
-            android:text="@string/day_of_week_th"
-            android:textColor="@color/whiteSmoke" />
+<!--        <TextView-->
+<!--            android:id="@+id/th_day"-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_margin="3dp"-->
+<!--            android:background="@drawable/ico_day_picker_non_active"-->
+<!--            android:gravity="center"-->
+<!--            android:text="@string/day_of_week_th"-->
+<!--            android:textColor="@color/whiteSmoke" />-->
 
-        <TextView
-            android:id="@+id/fr_day"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_margin="3dp"
-            android:background="@drawable/ico_day_picker_non_active"
-            android:gravity="center"
-            android:text="@string/day_of_week_fr"
-            android:textColor="@color/whiteSmoke" />
+<!--        <TextView-->
+<!--            android:id="@+id/fr_day"-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_margin="3dp"-->
+<!--            android:background="@drawable/ico_day_picker_non_active"-->
+<!--            android:gravity="center"-->
+<!--            android:text="@string/day_of_week_fr"-->
+<!--            android:textColor="@color/whiteSmoke" />-->
 
-        <TextView
-            android:id="@+id/sa_day"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_margin="3dp"
-            android:background="@drawable/ico_day_picker_non_active"
-            android:gravity="center"
-            android:text="@string/day_of_week_sa"
-            android:textColor="@color/whiteSmoke" />
+<!--        <TextView-->
+<!--            android:id="@+id/sa_day"-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_margin="3dp"-->
+<!--            android:background="@drawable/ico_day_picker_non_active"-->
+<!--            android:gravity="center"-->
+<!--            android:text="@string/day_of_week_sa"-->
+<!--            android:textColor="@color/whiteSmoke" />-->
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
 
 </LinearLayout>
